fixed issue with data page spacing and added numbers to sliders

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -221,3 +221,18 @@ legend{
 main{
     min-height: 55vh;
 }
+label{
+    display:block;
+}
+input[type="range"]{
+    width:90%;
+    display: inline-block;
+}
+output{
+    width:10%;
+    display:inline-block;
+    box-sizing: border-box;
+    padding:0 1.5em;
+    color: #fff;
+    font-size: 1.3em;
+}
